--- a/css/main.css
+++ b/css/main.css
@@ -61,14 +61,16 @@ a {
 .nav-top .nav-container .nav-links {
   display: flex;
   justify-content: space-between;
-  width: 25%;
   list-style: none;
 }
-.nav-top .nav-container .nav-links a {
+.nav-top .nav-container .nav-links .nav-link {
+  margin-left: 20px;
+}
+.nav-top .nav-container .nav-links .nav-link a {
   color: #fff;
   position: relative;
 }
-.nav-top .nav-container .nav-links a::before {
+.nav-top .nav-container .nav-links .nav-link a::before {
   position: absolute;
   content: "";
   height: 2px;
@@ -80,7 +82,7 @@ a {
   transform: translateX(-50%);
   transition: 0.5s ease;
 }
-.nav-top .nav-container .nav-links a:hover::before {
+.nav-top .nav-container .nav-links .nav-link a:hover::before {
   width: 24px;
   opacity: 1;
 }
